address some of reuben’s remarks from Ch 0

--- a/intro.tex
+++ b/intro.tex
@@ -28,7 +28,7 @@ M\SO_*(*) & \to \Z,
 \end{align*}
 neither of which is very interesting, since they're both zero in positive degrees.
 
-However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data than just the genus.  For instance, we can use it to extract a theory of \index{integral}integration as follows.  Consider the following special case of oriented bordism, where we evaluate $M\SO_*$ on an infinite loopspace:
+However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.  For instance, we can use such a map to extract a theory of \index{integral}integration by considering the following special case of oriented bordism, where we evaluate $M\SO_*$ on an infinite loopspace:
 \begin{align*}
 M\SO_n K(\Z, n) & = \left\{ \text{oriented $n$--manifolds mapping to $K(\Z, n)$} \right\} / \sim \\
 & = \left. \left\{ \begin{array}{c}\text{oriented $n$--manifolds $Z$} \\ \text{with a specified class $\omega \in H^n(Z; \Z)$} \end{array}\right\} \middle/ \sim \right. .
@@ -46,9 +46,9 @@ where $\phi$ is the orientation map.  Altogether, this composite gives us an ele
 The integer obtained by the above process is $\int_Z \omega$. \qed
 \end{lemma}
 
-\noindent This definition of $\int_Z \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.  It is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
+\noindent Many theorems accompany this definition of $\int_Z \omega$ for free, entailed by the general machinery of stable homotopy theory.  The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
 
-Now take $G = e$ to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be investigated solely through the lens of framed bordism.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
+Now take $G = e$ to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible that stable homotopy theory can be investigated solely through the lens of framed bordism.\footnote{Indeed, some people have taken up this viewpoint.  For a completely noncanonical point of entry, see Stolz~\cite{Stolz}.}  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
 Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, through what stage does the unit map $Me \to E$ factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through $MO$---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $\SO \to O$ as the $0${\th} Postnikov--Whitehead truncation of $O$, we are inspired to use the rest of the \index{Postnikov filtration}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
