--- a/conventions.tex
+++ b/conventions.tex
@@ -7,7 +7,7 @@ Throughout this book, we use the following conventions:
 \begin{itemize}
 \item $\CatOf{C}(X, Y)$ will denote the \index{mapping object}mapping object of arrows $X \to Y$ in a category $\CatOf{C}$.  If $\CatOf{C}$ is an $\infty$--category, this will often be interpreted as a mapping \emph{space}.  If $\CatOf{C}$ has a self-enrichment, we will often write $\underline{\CatOf{C}}(X, Y)$ (or, e.g., $\InternalAut(X)$) to distinguish the internal mapping object from the classical mapping set $\CatOf{C}(X, Y)$.  As an exception to this uniform notation, we will sometimes abbreviate $\underline{\CatOf{Spaces}}(X, Y)$ to $F(X, Y)$, and similarly we will sometimes abbreviate $\underline{\CatOf{Spectra}}(X, Y)$ to $F(X, Y)$.
 \item Following Lurie, for an object $X \in \CatOf C$ we will write $\CatOf C_{/X}$ for the \index{slice category}slice category of objects \emph{over} $X$ and $\CatOf C_{X/}$ for the slice category of objects \emph{under} $X$.
-\item For a ring spectrum $E$, we will write $E_* = \pi_* E$ for its \index{coefficient ring}coefficient ring, $E^* = \pi_{-*} E$ for its coefficient ring with the opposite grading, and $E_0 = E^0 = \pi_0 E$ for the $0${\th} degree component of its coefficient ring.  In particular, this allows us to make sense of expressions like ``$E^*\ps{x}$'', which we interpret as \[E^*\ps{x} = (E^*)\ps{x} = (\pi_{-*} E)\ps{x}.\]
+\item For a ring spectrum $E$, we will write $E_* = \pi_* E$ for its \index{coefficient ring}coefficient ring, $E^* = \pi_{-*} E$ for its coefficient ring with the opposite grading, and $E_0 = E^0 = \pi_0 E$ for the $0${\th} degree component of its coefficient ring.  This allows us to make sense of expressions like ``$E^*\ps{x}$'', which we interpret as \[E^*\ps{x} = (E^*)\ps{x} = (\pi_{-*} E)\ps{x} = \left\{ \sum_{j=0}^\infty a_j x^j \middle| \begin{array}{c} \text{$a_j$ is of degree $-j \cdot *$} \\ \text{for some fixed degree $*$} \end{array} \right\}.\]
 \item For a space or spectrum, we will write $X[n, \infty) \to X$ for the upward $n${\th} \index{Postnikov truncation}Postnikov truncation over $X$ and $X \to X(-\infty, n)$ for the downward $n${\th} Postnikov truncation under $X$.  There is thus a natural fiber sequence \[X[n, \infty) \to X \to X(-\infty, n).\]  This notation extends naturally to objects like $X(a, b)$ or $X[a, b]$, where $-\infty \le a \le b \le \infty$ denote the (closed or open) endpoints of any interval.
 \item We will write $S^n$ for the $n${\th} sphere when considered as a space and $\S^n$ for its suspension spectrum.  We will often abbreviate $\S^0$ to simply $\S$.
 \end{itemize}
