hella index corrections

--- a/mo.tex
+++ b/mo.tex
@@ -21,7 +21,7 @@ Our \emph{real} goal in this Case Study, however, is to introduce one of the mai
 Our goal is a sequence of theorems about the unoriented bordism spectrum $MO$.  We will begin by recalling a definition of the spectrum $MO$ using just abstract homotopy theory, because it involves ideas that will be useful to us throughout the semester and because we cannot compute effectively with the chain-level definition given in the Introduction.
 
 \begin{definition}
-For a spherical bundle $S^{n-1} \to \xi \to X$, its \idxentry{Thom space} is given by the cofiber \[\xi \to X \xrightarrow{\text{cofiber}} T_n(\xi).\]
+For a spherical bundle $S^{n-1} \to \xi \to X$, its \textit{Thom space} is given by the cofiber \[\xi \to X \xrightarrow{\text{cofiber}} T_n(\xi).\]
 \end{definition}
 \begin{proof}[``Proof'' of definition]
 There is a more classical construction of the Thom space: take the associated disk bundle by gluing an $n$--disk fiberwise, and add a point at infinity by collapsing $\xi$:\todo{What is this $\sqcup'$ notation?} \[T_n(\xi) = (\xi \sqcup'_{S^{n-1}} D^n)^+.\]  To compare this with the cofiber definition, recall that the thickening of $\xi$ to an $n$--disk bundle is the same as taking the mapping cylinder on $\xi \to X$.  Since the inclusion into the mapping cylinder is now a cofibration, the quotient by this subspace agrees with both the cofiber of the map and the introduction of a point at infinity.
@@ -36,7 +36,7 @@ If $\xi = S^{n-1} \times X$ is the trivial bundle, then $T_n(\xi) = S^n \sm (X_+
 Let $\xi$ be the tautological $S^0$--bundle over the unpointed space $\RP^\infty = BO(1)$.  Because $\xi$ has contractible total space, $EO(1)$, the cofiber degenerates and it follows that $T_1(\xi) = \RP^\infty$, a pointed space.\footnote{If you already know what's coming, this should comport with the Thom isomorphism: $x \cdot \HFtwo^* \RP^\infty \cong \widetilde{\HFtwo}^{* + 1} \RP^\infty$.}  More generally, arguing by cells shows that the Thom space for the tautological bundle over $\RP^n$ is $\RP^{n+1}$.
 \end{example}
 
-Now we catalog a bunch of useful properties of the Thom space functor.  Firstly, recall that a spherical bundle over $X$ is the same data~\cite{MayClassifyingSpaces} as a map $X \to B \GL_1 S^{n-1}$, where \index{classifying space of spherical bundles}$\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback of spaces
+Now we catalog a bunch of useful properties of the Thom space functor.  Firstly, recall that a spherical bundle over $X$ is the same data~\cite{MayClassifyingSpaces} as a map $X \to B \GL_1 S^{n-1}$, where \index{spectrum of units, $\gl_1$}\index{spherical bundle}$\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback of spaces
 \begin{center}
 \begin{tikzcd}[column sep=1.1em]
 \GL_1 S^{n-1} \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow{d} \\
@@ -80,7 +80,7 @@ $T$ is monoidal: it carries external fiberwise joins to smash products of Thom s
 \end{lemma}
 
 \begin{definition}\label{DefnOfMO}
-The spectrum \index{unoriented bordism@unoriented bordism, $MO$}$MO$ arises as the universal example of all these constructions, strung together:
+The spectrum \index{bordism!unoriented, $MO$}$MO$ arises as the universal example of all these constructions, strung together:
 \[MO := T(J_{\R}) = \colim_n T(J_{\R}^n) = \colim_n \Susp^{-n} T_n J_{\R}^n.\]
 \end{definition}
 
@@ -189,7 +189,7 @@ Set $R_n = \F_2[x_1, \ldots, x_n]$.  Elements of $(\Spec R_n)(T)$ can be identif
 \begin{align*}
 \mathbb A^n & := \Spec \F_2[x_1, \ldots, x_n], & \mathbb A^{n, J} & := \Spec \F_2[x_1, \ldots, x_n] / (x_k^{j_k+1}).
 \end{align*}
-The functor $\mathbb A^n$ is called \idxentry[affine n space]{affine $n$--space}---reasonable, since the value $\mathbb A^n(T)$ is isomorphic to $T^n$.  In particular, we refer to $\mathbb A^1$ as the \idxentry{affine line}.  Note that the quotient map $R_1 \to R_1^{(j)}$ induces an inclusion $\mathbb A^{1, (j)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``$\mathbb A^{1, (0)}$'' to be the \textit{origin on the affine line} and $\mathbb A^{1, (j)}$ to be the \textit{$(n+1)${\st} order (nilpotent) neighborhood of the origin} in the affine line.
+The functor $\mathbb A^n$ is called \index{scheme!affine $n$--space}\textit{affine $n$--space}---reasonable, since the value $\mathbb A^n(T)$ is isomorphic to $T^n$.  In particular, we refer to $\mathbb A^1$ as the \textit{affine line}.  Note that the quotient map $R_1 \to R_1^{(j)}$ induces an inclusion $\mathbb A^{1, (j)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``$\mathbb A^{1, (0)}$'' to be the \textit{origin on the affine line} and $\mathbb A^{1, (j)}$ to be the \textit{$(n+1)${\st} order (nilpotent) neighborhood of the origin} in the affine line.
 \end{example}
 
 We can also use this language to re-express another common object arising in algebraic topology: the Hopf algebra, which appears when taking the mod--$2$ cohomology of an $H$--group.  In addition to the usual ring structure on cohomology groups, the $H$--group multiplication, unit, and inversion maps additionally induce a diagonal map $\Delta$, an augmentation map $\eps$, and an antipode $\chi$ respectively.  Running through the axioms, one quickly checks the following:
@@ -201,7 +201,7 @@ This is a matter of recognizing the product in $\CatOf{Algebras}_{\F_2/}^{\mathr
 \end{proof}
 
 \begin{example}\label{InformalAdditiveGroupExample}
-The functor $\mathbb A^1$ introduced above is naturally valued in groups: since $\mathbb A^1(T) \cong T$, we can use the addition on $T$ to make it into an abelian group.  When considering $\mathbb A^1$ with this group scheme structure, we notate it as \index{additive group@additive group, $\mathbb G_a$}$\mathbb G_a$.  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:
+The functor $\mathbb A^1$ introduced above is naturally valued in groups: since $\mathbb A^1(T) \cong T$, we can use the addition on $T$ to make it into an abelian group.  When considering $\mathbb A^1$ with this group scheme structure, we notate it as \index{group scheme!additive group@additive group, $\mathbb G_a$}$\mathbb G_a$.  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:
 \begin{align*}
 \mathbb G_a \times \mathbb G_a & \xrightarrow{\mu} \mathbb G_a & x_1 + x_2 & \mapsfrom x, \\
 \mathbb G_a & \xrightarrow{\chi} \mathbb G_a & -x & \mapsfrom x, \\
@@ -227,7 +227,7 @@ In fact, $\mathbb A^1$ is naturally valued in \emph{rings}. It models the invers
 \end{remark}
 
 \begin{example}
-We define the \index{multiplicative group!multiplicative group, $\mathbb G_m$}\textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
+We define the \index{group scheme!multiplicative group, $\Gm$}\textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
 \begin{align*}
 \mathbb G_m \times \mathbb G_m & \xrightarrow{\mu} \mathbb G_m & x_1 \otimes x_2 & \mapsfrom x \\
 & & y_1 \otimes y_2 & \mapsfrom y, \\
@@ -259,13 +259,13 @@ This group scheme has several interesting properties, which we will merely state
 We now turn to a different class of examples, which will wind up being the key players in our upcoming topological story.  To begin, consider the colimit of the sets $\colim_{j \to \infty} \mathbb A^{1,(j)}(T)$, which is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $j$'' appear frequently enough that we are moved to give these functors a name too:
 \begin{definition}
 \todo{Erick points out that the morphisms in this system should be infintesimal thickenings.  Is there a functor-of-points way to recognize such things, without reaching all the way up to talking about ideals?  (He also thinks that we should allow finite type in addition to finite, but I don't think I want that. I've been wrong before, though.)}
-An \index{scheme!formal}\textit{affine formal scheme} is an ind-system of finite affine schemes.  The morphisms between two formal schemes are computed%
+An \index{formal scheme}\textit{affine formal scheme} is an ind-system of finite affine schemes.  The morphisms between two formal schemes are computed%
 \footnote{For the categorical reader, we include a significant categorical aside: passing to ind-systems has the effect of formally adjoining colimits of filtered diagrams to a category.  The formula for the mapping set comes from asserting that the assignment $\CatOf C \to \operatorname{Ind}(\CatOf C)$ is fully faithful, that its image consists of compact objects, and that each diagram $\CatOf D \to \CatOf C$ which can be interpreted as a member of $\operatorname{Ind}(\CatOf C)$ is its own colimit.  To control the difference between this category and the original category, it is often useful to restrict attention to diagrams of objects \emph{which are already compact in $\CatOf C$}, as in our definition of a formal scheme.}\footnote{Along the same lines, one can show the following recognition principle~\cite[Proposition 4.6]{StricklandFSFG}: a functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ which preserves finite limits is a formal scheme exactly when there exists a family of maps $X_i \to X$ from a set of affine schemes $X_i$ such that for all test algebras $T$ the following map is onto: \[\coprod_i X_i(T) \to X(T).\]}
 by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\alpha \colim_\beta \CatOf{Schemes}(X_\alpha, Y_\beta).\]  Given affine charts $X_\alpha = \Spec R_\alpha$, we will glibly suppress the system from the notation and write \[\Spf R := \{\Spec R_\alpha\}.\]
 \end{definition}
 
 \begin{example}\label{FormalGaExample}
-The individual schemes $\mathbb A^{1, (j)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $j+1$ can only be guaranteed to be nilpotent of order $2j+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (j)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \index{scheme!formal!group scheme}\textit{formal group scheme}, and this particular formal group scheme we denote by \index{formal group!additive@additive, $\G_a$}$\G_a$.
+The individual schemes $\mathbb A^{1, (j)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $j+1$ can only be guaranteed to be nilpotent of order $2j+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (j)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \index{formal group}\textit{formal group scheme}, and this particular formal group scheme we denote by \index{formal group!additive@additive, $\G_a$}$\G_a$.
 \end{example}
 
 \begin{example}
@@ -320,11 +320,11 @@ In this Lecture, we will address all these deficiencies of $X_{\HFtwo}$ except f
 We will begin by considering the grading on $\HFtwo^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:\footnote{Strickland gives an alternative formalism for tracking gradings~\cite[Sections 11 and 14]{StricklandFPFP} called a \emph{polarization}, which amounts to choosing a trivialization $\pi_2 E \cong \pi_0 E$ and considering the isomorphisms $\pi_{2n} E \cong (\pi_2 E)^{\otimes_{\pi_0 E} (n)}$.}
 
 \begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]
-A \index{grading}{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
+A \index{grading|see {$\Gm$ action}}\index{group scheme!multiplicative group, $\Gm$!action}{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
-A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an \index{action by Gm@action by $\mathbb G_m$}action by $\mathbb G_m$.  Additionally, a map $R \to S$ is homogeneous exactly when the induced map $\Spec S \to \Spec R$ is $\mathbb G_m$--equivariant.
+A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an \index{group scheme!multiplicative group, $\Gm$!action}action by $\mathbb G_m$.  Additionally, a map $R \to S$ is homogeneous exactly when the induced map $\Spec S \to \Spec R$ is $\mathbb G_m$--equivariant.
 \end{lemma}
 \begin{proof}
 A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map \[\alpha^*: R \to R \otimes \F_2[x^\pm].\]  Define $R_k$ to be those points in $r$ satisfying $\alpha^*(r) = r \otimes x^k$.  It is clear that we have $1 \in R_0$ and that $R_j R_k \subseteq R_{j+k}$.  To see that $R = \bigoplus_k R_k$, note that every tensor can be written as a sum of pure tensors.  Conversely, given a graded ring $R$, define the coaction map on $R_k$ by \[(r_k \in R_k) \mapsto x^k r_k\] and extend linearly.
@@ -346,7 +346,7 @@ will be difficult to squeeze into any kind of algebro-geometric framework.  Miln
 Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$.  By assuming that $X$ is a finite complex, we can write it as the Spanier--Whitehead dual $X = DY$ of some other finite complex $Y$.  Starting with the action map on $\HFtwo^* Y$:
 \begin{align*}
 \mathcal A^* \otimes \HFtwo^* Y & \to \HFtwo^* Y \\
-\intertext{we take the $\F_2$--linear dual to get a \index{coaction map}coaction map}
+\intertext{we take the $\F_2$--linear dual to get a \index{Steenrod algebra!coaction}coaction map}
 \mathcal A_* \otimes H\F_{2*} Y & \from H\F_{2*} Y, \\
 \intertext{then use $X = DY$ to return to cohomology}
 \mathcal A_* \otimes \HFtwo^* X & \xleftarrow{\lambda^*} \HFtwo^* X. \\
@@ -413,7 +413,7 @@ As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo P} \cong \G_a.\]
 \end{example}
 
 \begin{example}\label{FirstAppearanceOfInternalAut}
-Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{mapping object}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
+Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{formal group!homomorphism}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
 \end{example}
 
 \begin{remark}\label{AutGaHasStableCoopns}
@@ -547,7 +547,7 @@ A map $f\co \Spec S \to \Spec R$ induces maps $f^* \dashv f_*$ of categories of 
 One of the main uses of these operations is to define the cohomology of a sheaf.  Let $\pi\co X \to \Spec k$ be a scheme over $\Spec k$, $k$ a field, and let $\sheaf F$ be a sheaf over $X$.  The adjunction above induces a derived adjunction \[\Ext_X(\pi^* k, \sheaf F) \cong \Ext_{\Spec k}(k, R\pi_* \sheaf F),\] which is used to translate the \emph{definition} of sheaf cohomology to that of the cohomology of the derived pushforward $R\pi_* \sheaf F$, itself interpretable as a mere complex of $k$--modules.  This pattern is very general: the sense of ``cohomology'' relevant to a situation is often accessed by taking the derived pushforward to a suitably terminal object.\footnote{This perspective often falls under the heading of ``six--functor formalism''.}  To invent a notion of cohomology for comodules over a Hopf algebra, we are thus moved to produce push and pull functors for a map of Hopf algebras, and this is best motivated by another example.
 
 \begin{example}\label{HopfAlgebrasFromFiniteGroups}
-A common source of Hopf algebras is through \index{group--ring}group--rings: given a group $G$, we can define the Hopf $k$--algebra $k[G]$ consisting of formal $k$--linear combinations of elements of $G$.  This Hopf algebra is commutative exactly when $G$ is abelian, and $k[G]$--modules are naturally equivalent to $k$--linear $G$--representations.  Dually, the ring $k^G$ of $k$--valued functions on $G$ is always commutative, using pointwise multiplication of functions, and it is \emph{cocommutative} exactly when $G$ is abelian.  If $G$ is finite, then $k^G$ and $k[G]$ are $k$--linear dual Hopf algebras, and hence finite--dimensional $k^G$--comodules are naturally equivalent to finite--dimensional $k$--linear $G$--representations.\footnote{There is a variation on this equivalence that uses fewer dualities and which is instructive to expand.  The Hopf algebra $k^G = \prod_{g \in G} k$ is the ring of functions on the constant group scheme $G$, and its $k$--points $(\Spec k^G)(k)$ biject with points in $G$.  Namely, given $g \in G$ we can form a projection map $g\co k^G \to k$ and hence a composite $M \to M \otimes_k k^G \xrightarrow{\id \otimes g} M \otimes_k k \cong M$.  Collectively, this determines a map $G \times M \to M$ witnessing $M$ as a $G$--representation.  In the other direction, if $G$ is finite then we can construct a map $M \to M \otimes_k \prod_{g \in G} k$ sending $m \in M$ to $g \cdot m$ in the $g${\th} labeled component of the target.}
+A common source of Hopf algebras is through \index{Hopf algebra!group--ring}group--rings: given a group $G$, we can define the Hopf $k$--algebra $k[G]$ consisting of formal $k$--linear combinations of elements of $G$.  This Hopf algebra is commutative exactly when $G$ is abelian, and $k[G]$--modules are naturally equivalent to $k$--linear $G$--representations.  Dually, the ring $k^G$ of $k$--valued functions on $G$ is always commutative, using pointwise multiplication of functions, and it is \emph{cocommutative} exactly when $G$ is abelian.  If $G$ is finite, then $k^G$ and $k[G]$ are $k$--linear dual Hopf algebras, and hence finite--dimensional $k^G$--comodules are naturally equivalent to finite--dimensional $k$--linear $G$--representations.\footnote{There is a variation on this equivalence that uses fewer dualities and which is instructive to expand.  The Hopf algebra $k^G = \prod_{g \in G} k$ is the ring of functions on the constant group scheme $G$, and its $k$--points $(\Spec k^G)(k)$ biject with points in $G$.  Namely, given $g \in G$ we can form a projection map $g\co k^G \to k$ and hence a composite $M \to M \otimes_k k^G \xrightarrow{\id \otimes g} M \otimes_k k \cong M$.  Collectively, this determines a map $G \times M \to M$ witnessing $M$ as a $G$--representation.  In the other direction, if $G$ is finite then we can construct a map $M \to M \otimes_k \prod_{g \in G} k$ sending $m \in M$ to $g \cdot m$ in the $g${\th} labeled component of the target.}
 
 A map of groups $f\co G \to H$ induces a map $k^f\co k^H \to k^G$ of Hopf algebras, and it is reasonable to expect that the induced push and pull maps of comodules mimic those of $G$-- and $H$--representations.  Namely, given an $H$--representation $M$, we can produce a corresponding $G$--representation by precomposition with $f$.  However, given a $G$--representation $N$, two features may have to be corrected to extract an $H$--representation:
 \begin{enumerate}
@@ -631,7 +631,7 @@ Next, we consider the more computationally serious case of $X = kO$, the connect
 \Susp^2 kU & \xrightarrow{\cdot \beta} kU \to H\Z, &
 H\Z & \xrightarrow{\cdot 2} H\Z \to \HFtwo.
 \end{align*}
-These combine to give a resolution of $\HFtwo$ via an iterated cofiber of free $kO$--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity $kO \sm_{kO} \HFtwo \simeq \HFtwo$ gives a small presentation of the Hopf algebra $\pi_* \HFtwo \sm_{kO} \HFtwo$: it is a commutative Hopf algebra over $\F_2$ with the above Poincar\'e series.  The \index{Milnor--Moore theorem}Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} classification of commutative Hopf algebras over $\F_2$ shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for $|a| = 1$, $|b| = 2$, and $|c| = 3$.  By knowing that the natural map $\mathcal A \to \pi_* \HFtwo \sm_{kO} \HFtwo$ winds up inducing an isomorphism $\pi_{* \le 2} \S \to \pi_{* \le 2} kO$, we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
+These combine to give a resolution of $\HFtwo$ via an iterated cofiber of free $kO$--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity $kO \sm_{kO} \HFtwo \simeq \HFtwo$ gives a small presentation of the Hopf algebra $\pi_* \HFtwo \sm_{kO} \HFtwo$: it is a commutative Hopf algebra over $\F_2$ with the above Poincar\'e series.  The \index{Milnor--Moore}Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} classification of commutative Hopf algebras over $\F_2$ shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for $|a| = 1$, $|b| = 2$, and $|c| = 3$.  By knowing that the natural map $\mathcal A \to \pi_* \HFtwo \sm_{kO} \HFtwo$ winds up inducing an isomorphism $\pi_{* \le 2} \S \to \pi_{* \le 2} kO$, we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
 \begin{center}
 \begin{tikzcd}
 \pi_* \HFtwo \sm \HFtwo \arrow{r} \arrow[equal]{d} & \pi_* \HFtwo \sm_{kO} \HFtwo \arrow[equal]{d} \\
@@ -722,7 +722,7 @@ The top isomorphism asserts that $\F_2$--cohomology and $\F_2$--homology are lin
 \end{proof}
 
 \begin{corollary}\label{MOOrientationsVsRPClasses}
-There is a bijection between homotopy classes of ring maps $MO \to \HFtwo P$ and homotopy classes of factorizations\index{Adams's condition}
+There is a bijection between homotopy classes of ring maps $MO \to \HFtwo P$ and homotopy classes of factorizations\index{orientation!Adams's condition}
 \begin{center}
 \begin{tikzcd}
 \S^0 \arrow{r} \arrow{rd} & MO(1) \arrow[densely dotted]{d} \\
