--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@
 
 The goal of this book is to communicate a certain \textit{Weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for this introduction is to tell a story about one theorem where it is especially apparent.
 
-To begin, we will define a homology theory called \index{bordism homology}\textit{bordism homology}.  Recall that the singular homology of a space $X$ comes about by probing $X$ with simplices: beginning with the collection of continuous maps $\sigma\co \Delta^n \to X$, we take the free $\Z$--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds $Z$ as the probes instead of simplices:\footnote{One doesn't need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
+To begin, we will define a homology theory called \index{bordism!geometric chains}\textit{bordism homology}.  Recall that the singular homology of a space $X$ comes about by probing $X$ with simplices: beginning with the collection of continuous maps $\sigma\co \Delta^n \to X$, we take the free $\Z$--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds $Z$ as the probes instead of simplices:\footnote{One doesn't need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
 \begin{align*}
 \cdots & \xrightarrow{\partial} \{Z^n \to X \mid \text{$Z^n$ a compact $n$--manifold}\} \\
 & \xrightarrow{\partial} \{Z^{n-1} \to X \mid \text{$Z^{n-1}$ a compact $(n-1)$--manifold}\} \\
@@ -22,13 +22,13 @@ In fact, we can define a bordism theory $MG$ for any suitable family of structur
 \begin{align*}
 MO & \to H\Z/2, &
 M\SO & \to H\Z. \\
-\intertext{In both cases, we can evaluate on a point to get ring maps, called \index{genus}\textit{genera}:}
+\intertext{In both cases, we can evaluate on a point to get ring maps, called \index{orientation!genus}\textit{genera}:}
 MO_*(*) & \to \Z/2, &
 M\SO_*(*) & \to \Z,
 \end{align*}
 neither of which is very interesting, since they're both zero in positive degrees.
 
-However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.  For instance, we can use such a map to extract a theory of \index{integral}integration by considering the following special case of oriented bordism, where we evaluate $M\SO_*$ on an infinite loopspace:
+However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.  For instance, we can use such a map to extract a theory of integration by considering the following special case of oriented bordism, where we evaluate $M\SO_*$ on an infinite loopspace:
 \begin{align*}
 M\SO_n K(\Z, n) & = \left\{ \text{oriented $n$--manifolds mapping to $K(\Z, n)$} \right\} / \sim \\
 & = \left. \left\{ \begin{array}{c}\text{oriented $n$--manifolds $Z$} \\ \text{with a specified class $\omega \in H^n(Z; \Z)$} \end{array}\right\} \middle/ \sim \right. .
@@ -50,7 +50,7 @@ The integer obtained by the above process is $\int_Z \omega$. \qed
 
 Now take $G = e$ to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible that stable homotopy theory can be investigated solely through the lens of framed bordism.\footnote{Indeed, some people have taken up this viewpoint.  For a completely noncanonical point of entry, see Stolz~\cite{Stolz}.}  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, through what stage does the unit map $Me \to E$ factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through $MO$---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $\SO \to O$ as the $0${\th} Postnikov--Whitehead truncation of $O$, we are inspired to use the rest of the \index{Postnikov filtration}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
+Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, through what stage does the unit map $Me \to E$ factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through $MO$---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $\SO \to O$ as the $0${\th} Postnikov--Whitehead truncation of $O$, we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\String \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & M\SO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
@@ -60,16 +60,16 @@ Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\St
 
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
-\begin{theorem}[{Ochanine~\cite{Ochanine}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{Witten genus}
-There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $Z$ is a $\Spin$ manifold such that half its first Pontryagin class vanishes---that is, if $Z$ lifts to a $\String$--manifold---then $\sigma(Z)$ lands in the subring $MF \subseteq \Z\ps{q}$ of \index{q-expansion@$q$--expansion}$q$--expansions of \index{modular form}modular forms with integral coefficients. \qed
+\begin{theorem}[{Ochanine~\cite{Ochanine}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{orientation!Witten genus}
+There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $Z$ is a $\Spin$ manifold such that half its first Pontryagin class vanishes---that is, if $Z$ lifts to a $\String$--manifold---then $\sigma(Z)$ lands in the subring $MF \subseteq \Z\ps{q}$ of \index{modular form!q expansion@$q$--expansion}$q$--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem}
 
 \noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.
 
-Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic cohomology}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
+Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic spectrum}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
 \begin{theorem}[{\cite[Theorem 2.59]{AHSTheoremOfTheCube}}]
-If $E$ is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra $M\String \to E$ called the \index{sigma-orientation@$\sigma$--orientation}$\sigma$--orientation (for $E$).  Additionally, there is an elliptic spectrum $K^{\Tate}$ whose $\sigma$--orientation gives Witten's genus $M\String_* \to K^{\Tate}_*$ . \qed
+If $E$ is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra $M\String \to E$ called the \index{sigma orientation@$\sigma$--orientation}$\sigma$--orientation (for $E$).  Additionally, there is an elliptic spectrum $K^{\Tate}$ whose $\sigma$--orientation gives Witten's genus $M\String_* \to K^{\Tate}_*$ . \qed
 \end{theorem}
 
 We now come to the motivation for this text: the homotopical $\sigma$--orientation was actually first constructed using formal geometry.  The original proof of Ando--Hopkins--Strickland begins with a reduction to maps of the form \[MU[6, \infty) \to E.\]  They then work to show that in especially good cases they can complete the missing arrow in the diagram
