--- a/sigma.tex
+++ b/sigma.tex
@@ -24,7 +24,7 @@ We also give a short r\'esum\'e on the theory of elliptic curves in \Cref{Sectio
 
 We will now finally address an elephant that has been lingering in our metaphorical room: in the first third of this book we were primarily interested in the formal scheme associated to the \emph{cohomology} of a space, but in the second third we were primarily interested in a construction converting the \emph{homology} of a spectrum to a sheaf over a context.  Our goal for this Lecture is to, when possible, put these two variances on even footing.  Our motivation for putting this lingering discrepancy to rest is more technical than aesthetic: we have previously wanted access to certain colimits of formal schemes (e.g., in \Cref{DivConstructionsAreFree}).  While such colimits are generally forbidding, similarly to colimits of manifolds, we will in effect produce certain conditions under which they are accessible.
 
-For $E$ a ring spectrum and $X$ a space, the diagonal map $\Delta\co X \to X \times X$ induces a multiplication map on $E$--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying $E$--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case that that map is an isomorphism, the long composite induces the structure of an \index{coalgebra}$E_*$--coalgebra on $E_* X$.  In the most generous case that $E$ is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, $E^* X$ is functorially the linear dual of $E_* X$.  This motivates us to consider the following purely algebraic construction:
+For $E$ a ring spectrum and $X$ a space, the diagonal map $\Delta\co X \to X \times X$ induces a multiplication map on $E$--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying $E$--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case that that map is an isomorphism, the long composite induces the structure of an \index{comodule!coalgebra}$E_*$--coalgebra on $E_* X$.  In the most generous case that $E$ is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, $E^* X$ is functorially the linear dual of $E_* X$.  This motivates us to consider the following purely algebraic construction:
 
 \begin{definition}
 Let $C$ be a coalgebra over a field $k$.  We define a functor\index{scheme!coalgebraic!Sch@$\Sch$}
@@ -67,7 +67,7 @@ Select a coalgebra $C$ over a field $k$ together with a pointing $k \to C$.  Wri
 It is unfortunate, then, that when working over a ring rather than a field \Cref{kCoalgebrasAreIndFinite} fails~\cite[Appendix 5.3]{Michaelis}.  Nonetheless, it is possible to bake into the definitions the machinery needed to get a good-enough analogue of \Cref{CoalgsAndFSchsAgreeOverk}.
 
 \begin{definition}[{\cite[Definition 4.58]{StricklandFSFG}}]\label{DefnCoalgebraicFormalScheme}
-Let $C$ be an $R$--coalgebra which is free as an $R$--module.  A basis $\{x_j\}$ of $C$ is said to be a \index{good basis}\textit{good basis} when any finite subcollection of $\{x_j\}$ can be finitely enlarged to a subcollection that spans a subcoalgebra.  The coalgebra $C$ is itself said to be \textit{good} when it admits a good basis.  A formal scheme $X$ is said to be \index{scheme!coalgebraic}\textit{coalgebraic} when it is isomorphic to $\Sch C$ for a good coalgebra $C$.
+Let $C$ be an $R$--coalgebra which is free as an $R$--module.  A basis $\{x_j\}$ of $C$ is said to be a \index{coalgebra!good basis}\textit{good basis} when any finite subcollection of $\{x_j\}$ can be finitely enlarged to a subcollection that spans a subcoalgebra.  The coalgebra $C$ is itself said to be \textit{good} when it admits a good basis.  A formal scheme $X$ is said to be \index{scheme!coalgebraic}\textit{coalgebraic} when it is isomorphic to $\Sch C$ for a good coalgebra $C$.
 \end{definition}
 
 \begin{example}\label{FVarsAreCoalgebraic}
@@ -178,7 +178,7 @@ In \Cref{ProjectivizationLecture}, we preferred to think of the cohomology of a 
 For $\xi\co G \to BGL_1 \S$ a group map, the Thom spectrum $T\xi$ is a $(\Susp^\infty_+ G)$--cotorsor.
 \end{lemma}
 \begin{proof}[Construction]
-The Thom isomorphism $T\xi \sm T\xi \simeq T\xi \sm \Susp^\infty_+ G$ composes with the unit map $\S \to T\xi$ to give the \index{Thom diagonal}\textit{Thom diagonal} \[T\xi \to T\xi \sm \Susp^\infty_+ G. \qedhere\]
+The Thom isomorphism $T\xi \sm T\xi \simeq T\xi \sm \Susp^\infty_+ G$ composes with the unit map $\S \to T\xi$ to give the \index{Thom spectrum!Thom diagonal}\textit{Thom diagonal} \[T\xi \to T\xi \sm \Susp^\infty_+ G. \qedhere\]
 \end{proof}
 
 \noindent Applying $\Spec E_0(-)$, the Thom diagonal is translated into the structure of a free and transitive action map \[\Spec E_0 T(\xi) \times \Spec E_0 G \to \Spec E_0 T(\xi).\]  This construction is natural in the formation of $G$ or $\xi$, and so we are also moved to specialize to the cases of $G = \Z \times BU$ and $G = BU$ and to understand $\Spec E_0 G$ in those contexts.  Again, this is a matter of chaining together results we have already proven:
@@ -858,7 +858,7 @@ s \in \Theta^2 \sheaf I(0) & \mapsto \frac{\mu_{12}^* s}{\mu_1^* s \otimes \mu_2
 \end{lemma}
 
 \begin{remark}
-The rational conclusion of this analysis admits a very mild reformulation: there is always a natural $MU[6, \infty)$--orientation of a rational spectrum $E$ given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the $C^3(\CP^\infty_E; \Gm)$--torsor structure of $C^3(\CP^\infty_E; \sheaf I(0))$ into an isomorphism $C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)$.  In sum, an arbitrary $MU[6, \infty)$--orientation of $E$ is witnessed by a symmetric rigid trivariate power series satisfying $kU^0$--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by $M\SU$, $MU$, and $MUP$; in the latter two cases this recovers the \index{Hirzebruch series}\textit{Hirzebruch series}, which associated to an orientation $\phi\co MUP \to \Q \otimes E$ is the difference of trivializations $x / \exp_\phi(x)$.  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where $c_1$ is the first Chern class associated to the canonical rational orientation.
+The rational conclusion of this analysis admits a very mild reformulation: there is always a natural $MU[6, \infty)$--orientation of a rational spectrum $E$ given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the $C^3(\CP^\infty_E; \Gm)$--torsor structure of $C^3(\CP^\infty_E; \sheaf I(0))$ into an isomorphism $C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)$.  In sum, an arbitrary $MU[6, \infty)$--orientation of $E$ is witnessed by a symmetric rigid trivariate power series satisfying $kU^0$--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by $M\SU$, $MU$, and $MUP$; in the latter two cases this recovers the \index{characteristic series!Hirzebruch series}\textit{Hirzebruch series}, which associated to an orientation $\phi\co MUP \to \Q \otimes E$ is the difference of trivializations $x / \exp_\phi(x)$.  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where $c_1$ is the first Chern class associated to the canonical rational orientation.
 \end{remark}
 
 Our second task is to analyze the cohomology formal scheme associated to $BU[6, \infty)$, and we begin with the choice $E = H$.
@@ -887,7 +887,7 @@ We hope to gain control (as in \Cref{HopfRingForEBP} or \Cref{Pi3ForCplxOrientab
 \Z\{\beta_j\}_j \arrow["\cong"]{r} & \sheaf O C^3(\G_a; \Gm).
 \end{tikzcd}
 \end{center}
-By induction on degree, one sees that $\alpha$ is surjective, and since the source and target are abelian groups of graded finite rank \emph{and the source is free}, we need only check that they have the same rational \index{Poincar\'e series}Poincar\'e series to conclude that $\alpha$ is an isomorphism.  Over $\Spec \Q$ we can use the \index{formal group!logarithm}logarithm to construct an isomorphism \[\Spec \Q \times (\moduli{fgl} \times C^k(\G; \Gm)) \to \Spec \Q \times (\moduli{fgl} \times C^k(\G_a; \Gm)),\] hence the Poincar\'e series agree, hence $\alpha \otimes \Q$ is an isomorphism, and finally $\alpha$ is too.
+By induction on degree, one sees that $\alpha$ is surjective, and since the source and target are abelian groups of graded finite rank \emph{and the source is free}, we need only check that they have the same rational \index{Poincar\'e series}Poincar\'e series to conclude that $\alpha$ is an isomorphism.  Over $\Spec \Q$ we can use the \index{logarithm}logarithm to construct an isomorphism \[\Spec \Q \times (\moduli{fgl} \times C^k(\G; \Gm)) \to \Spec \Q \times (\moduli{fgl} \times C^k(\G_a; \Gm)),\] hence the Poincar\'e series agree, hence $\alpha \otimes \Q$ is an isomorphism, and finally $\alpha$ is too.
 
 Lastly, one checks that this basis gives us access to the desired collection of good subcoalgebras: these are indexed on an integer $d$, spanned by those basis vectors of degree at most $d$.
 \end{proof}
@@ -1050,7 +1050,7 @@ This embedding of $E_\Lambda$ as an intersection of quadric surfaces in $\CP^3$ 
 \end{remark}
 
 The $\theta$--functions version of the story has two main successes: it continues to make sense in algebraic geometry, without invoking transcendental functions, and in fact there is a version of this story for an \emph{arbitrary} \index{abelian variety}abelian variety.  It turns out that all abelian varieties are projective, and the theorem sitting at the heart of this claim is
-\begin{corollary}[{``Theorem of the Cube'', \cite[Corollary I.6.4 and Theorem I.7.1]{Milne}}]\label{Theta3IsTrivial}\index{theorem of the cube}\index{theta structure@$\Theta$--structure}
+\begin{corollary}[{``Theorem of the Cube'', \cite[Corollary I.6.4 and Theorem I.7.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@$\Theta$--structure|see {cubical structure}}
 Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid (i.e., it has a specified trivialization at the identity point of $A$), then $\Theta^3(\L)$ is \emph{canonically} trivialized by a section $s(A; \L)$. \qed
 \end{corollary}
 
@@ -1075,7 +1075,7 @@ The proof of projectivity arising from this method rests on choosing a line bund
 Breen presented a relative version of this story that applies to arbitrary \emph{commutative group schemes}, where the basic objects are a choice of line bundle $\L$ over a commutative group scheme $A$, a choice of trivialization of $\Theta^3 \L$, and an epimorphism $\pi\co A' \to A$ that trivializes $\L$.
 \end{remark}
 
-Finally, we remark that the function \[e\co C^3(\G; \Gm) \to \InternalHom{FormalGroups}(\G^{\sm 2}, \Gm)\] considered in \Cref{ChromaticKUCoopnsSection} also manifests in the theory of abelian varieties.  Let $A$ be an abelian variety equipped with a line bundle $\L$.  Suppose that $s$ is a symmetric, rigid section of $\Theta^3 \L$, sometimes called a \index{cubical structure}\textit{cubical structure on $\L$}.  Using the identification $(p_{12} - p_1 - p_2)^* \Theta^2 \L = \Theta^3 \L$, this induces the structure of a \index{symmetric biextension}\textit{symmetric biextension} on $\Theta^2 \L$ via the multiplication maps
+Finally, we remark that the function \[e\co C^3(\G; \Gm) \to \InternalHom{FormalGroups}(\G^{\sm 2}, \Gm)\] considered in \Cref{ChromaticKUCoopnsSection} also manifests in the theory of abelian varieties.  Let $A$ be an abelian variety equipped with a line bundle $\L$.  Suppose that $s$ is a symmetric, rigid section of $\Theta^3 \L$, sometimes called a \index{cubical structure}\textit{cubical structure on $\L$}.  Using the identification $(p_{12} - p_1 - p_2)^* \Theta^2 \L = \Theta^3 \L$, this induces the structure of a \index{symmetric biextension}\textit{cubical structure!symmetric biextension} on $\Theta^2 \L$ via the multiplication maps
 \begin{align*}
 (\Theta^2 \L)_{x, y} \otimes (\Theta^2 \L)_{x', y} & \to (\Theta^2 \L)_{x + x', y}, &
 (\Theta^2 \L)_{x, y} \otimes (\Theta^2 \L)_{x, y'} & \to (\Theta^2 \L)_{x, y + y'}.
@@ -1232,7 +1232,7 @@ The singularities of a degenerate Weierstrass equation always occur outside of a
 \end{remark}
 
 \begin{definition}[{\cite[Section 5]{MoravaFormsOfKthy}, \cite[Section 2.7]{AHSTheoremOfTheCube}}]\label{TateKTheoryDefn}
-The generalized \index{elliptic spectrum!generalized}elliptic spectrum $K_{\Tate}$, called \index{Tate K theory@Tate $K$--theory}\textit{Tate $K$--theory}, has as its underlying spectrum $KU\ps{q}$.  The associated generalized elliptic curve is $C_{\Tate}$, and the isomorphism $\CP^\infty_{KU\ps{q}} \cong (C_{\Tate})^\wedge_0$ is $\phi$ from \Cref{TwistedCubicGivesGm}.
+The generalized \index{elliptic spectrum!generalized}elliptic spectrum $K_{\Tate}$, called \index{Tate curve!Tate K theory@Tate $K$--theory}\textit{Tate $K$--theory}, has as its underlying spectrum $KU\ps{q}$.  The associated generalized elliptic curve is $C_{\Tate}$, and the isomorphism $\CP^\infty_{KU\ps{q}} \cong (C_{\Tate})^\wedge_0$ is $\phi$ from \Cref{TwistedCubicGivesGm}.
 \end{definition}
 
 \noindent The trade for the breadth of this definition is that theorems pulled from the study of abelian varities have to be shown to extend uniquely to those generalized elliptic curves which are not smooth curves.
@@ -1294,7 +1294,7 @@ where $G_{2k}$ is the $2k${\th} Eisenstein series.  Noting that $G_2$ is \emph{n
 \end{remark}
 
 \begin{remark}[{\cite{AndoMorava}}]
-Another location where this series $\psi$ appears is in the theory of \index{p divisible group@$p$--divisible group!Tate}Tate $p$--divisible groups of Ando and Morava (and, in some sense, in the sense of Katz and Mazur\citeme{Find a reference}).  For a formal group $\G$ over $\Spf R$ with group law $+_\phi$, they consider the Weierstrass product \[\Theta_{\phi}(x; q) = x \cdot \prod_{\substack{k \in \Z \\ k \ne 0}} \frac{(x +_\phi [k]_\phi(q))}{[k]_\phi(q)} \in R\ps{x,q},\] which plays the role of a kind of $\theta$--function for $\G$.  They also connect this series the \index{formal group!quotient}quotient function mapping to the group scheme $\G / q^{\Z}$ (in the sense of \Cref{NormForFns}), which they further identify as the \index{formal group!universal constant extension}universal extension of $\G$ by a constant $p$--divisible group of dimension $1$.  In the presense of a global object $\mathbb G$ specializing to $\G$ (as in the case of $\G_a$ or $\G_m$), they show how to modify this product to an analytically convergent power series, recovering the characteristic series for the \index{A hat genus@$\widehat A$--genus}$\widehat A$--genus and the \index{L genus@$L$--genus}$L$--genus.  The higher height analogues of these results seem very mysterious and very interesting.\footnote{Morava is generally full of interesting ideas about genera---see, for instance,~\cite{MoravaMotivicThomIso}.}
+Another location where this series $\psi$ appears is in the theory of \index{p divisible group@$p$--divisible group!Tate}Tate $p$--divisible groups of Ando and Morava (and, in some sense, in the sense of Katz and Mazur\citeme{Find a reference}).  For a formal group $\G$ over $\Spf R$ with group law $+_\phi$, they consider the Weierstrass product \[\Theta_{\phi}(x; q) = x \cdot \prod_{\substack{k \in \Z \\ k \ne 0}} \frac{(x +_\phi [k]_\phi(q))}{[k]_\phi(q)} \in R\ps{x,q},\] which plays the role of a kind of $\theta$--function for $\G$.  They also connect this series the \index{formal group!quotient}quotient function mapping to the group scheme $\G / q^{\Z}$ (in the sense of \Cref{NormForFns}), which they further identify as the \index{formal group!universal constant extension}universal extension of $\G$ by a constant $p$--divisible group of dimension $1$.  In the presense of a global object $\mathbb G$ specializing to $\G$ (as in the case of $\G_a$ or $\G_m$), they show how to modify this product to an analytically convergent power series, recovering the characteristic series for the \index{orientation!A hat genus@$\widehat A$--genus}$\widehat A$--genus and the \index{orientation!L genus@$L$--genus}$L$--genus.  The higher height analogues of these results seem very mysterious and very interesting.\footnote{Morava is generally full of interesting ideas about genera---see, for instance,~\cite{MoravaMotivicThomIso}.}
 \end{remark}
 
 \begin{remark}[{\cite{AFG}}]
@@ -1378,7 +1378,7 @@ For $E$ a complex-orientable ring spectrum with $1/2 \in \pi_0 E$, the functor $
 \end{corollary}
 
 \begin{remark}[{\cite[Section 26.1]{Hirzebruch}}]
-One of the most pleasant features of the case where $2$ is inverted is that real orientations can not only be identified, but the projection idempotents mean that they can be \emph{crafted} from complex orientations, and the idempotents have a recognizable effect on the traditional mechanisms for specifying orientations.  For instance, the Conner--Floyd orientation on $K$--theory is specified by the classical logarithm, and the associated real orientation formed by projection to the positive idempotent has logarithm \[\operatorname{tanh}^{-1}(x) = \frac{-\ln(1 - x) + \ln(1 + x)}{2},\] i.e., the average of the logarithm and its conjugate.  The resulting orientation is commonly referred to as the \index{orientation!Atiyah Bott Shapiro@Atiyah--Bott--Shapiro}\textit{Atiyah--Bott--Shapiro orientation}, whose associated genus is the \index{A hat genus@$\widehat A$--genus}\textit{$\widehat A$--genus}.  Similar techniques give access to connective real orientations associated to preexisting connective complex orientations.
+One of the most pleasant features of the case where $2$ is inverted is that real orientations can not only be identified, but the projection idempotents mean that they can be \emph{crafted} from complex orientations, and the idempotents have a recognizable effect on the traditional mechanisms for specifying orientations.  For instance, the Conner--Floyd orientation on $K$--theory is specified by the classical logarithm, and the associated real orientation formed by projection to the positive idempotent has logarithm \[\operatorname{tanh}^{-1}(x) = \frac{-\ln(1 - x) + \ln(1 + x)}{2},\] i.e., the average of the logarithm and its conjugate.  The resulting orientation is commonly referred to as the \index{orientation!Atiyah Bott Shapiro@Atiyah--Bott--Shapiro}\textit{Atiyah--Bott--Shapiro orientation}, whose associated genus is the \index{orientation!A hat genus@$\widehat A$--genus}\textit{$\widehat A$--genus}.  Similar techniques give access to connective real orientations associated to preexisting connective complex orientations.
 \end{remark}
 
 We now turn to the \emph{much} more complicated setting where $2$ is not invertible, where we again aim to identify $M\String$--orientations of a complex-orientable cohomology theory with certain $\Sigma$--structures.  This is not possible in much generality, a situation which is hinted by the analogous lower-order case: complex-orientability is flatly \emph{not enough} to conclude anything about whether a cohomology theory admits an $MO$--orientation, which we saw in \Cref{MOSplitsIntoHF2s} to be actually equivalent to admitting an $\HFtwo$--algebra structure.  In order to get a handle on the task in front of us, consider the following diagram of fiber sequences of infinite loopspaces:
