--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1103,6 +1103,7 @@ The results of this Lecture are accessed from a different perspective by Hopkins
 
 \section{Cooperations among geometric points on \texorpdfstring{$\moduli{fg}$}{Mfg}}\label{CoopnsForMoravaKandHA}
 
+
 Our discussion of unstable cooperations has touched on each of the families of chromatic homology theories described in \Cref{DefnChromaticHomologyThys} except one: the \index{Morava K theory@Morava $K$--theory}\index{Morava E theory@Morava $E$--theory}Morava $K$-- and $E$--theories.  Our final goal before moving on to other subjects is to describe some of the \index{operations!mixed}\index{operations!unstable}mixed unstable cooperations for $(K_\Gamma)_* \OS{K_{\Gamma'}}{*}$.  In complete generality, this seems like a difficult problem: our algebraic model is rooted in formal group homomorphisms, and we have not proven any theorems about the moduli of such for arbitrary finite-height formal groups.  However, the landscape brightens considerably in the case where we pick $\Gamma' = \G_a$, as this is the sort of calculation we considered in \Cref{LazarevComparisonOfCplxes} and \Cref{CalculationOfLTTangentSpace}.  In light of this, we specialize $\Gamma'$ to $\G_a$ (and hence $K_{\Gamma'}$ to an Eilenberg--Mac Lane spectrum $H$), and we abbreviate $K_\Gamma$ to just $K$.
 
 As with all the other major results of this Case Study, our approach will rest on the \index{bar spectral sequence}bar spectral sequence \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}.\]  The analysis of this spectral sequence was first accomplished by Ravenel and Wilson~\cite{RavenelWilsonKthyOfEMSpaces}, but has since been re-envisioned by Hopkins and Lurie~\cite[Section 2]{HopkinsLurie}.  In order to give an effective analysis of this spectral sequence in line with the theme of this book, we will endeavor to give algebro-geometric interpretations of its input and its output, beginning with the case $q = 0$ and $H = H(S^1[p^j])$ for some $1 \le j \le \infty$.  This task itself begins with giving just \emph{algebraic} descriptions of the input and output.  For $j < \infty$, we have essentially already computed the output by other means:
@@ -1227,6 +1228,7 @@ From here, it is a matter of \emph{very} carefully pairing elements up (cf.\ \ci
 \end{remark}
 
 \begin{remark}[{\cite[Section 3]{HopkinsLurie}, \cite{HedayatzadehGeneralCase}, \cite{HedayatzadehFieldCase}}]\label{EThyOfEMSpaces}
+\todo{Mention Ravenel--Wilson--Yagita's work, especially the difference between cohomology and homology, and matters of continuous $E$--theory.}
 Because $K^* \OS{H\Z/p^j}{q}$ is even, you can hope to augment this to a calculation of $E^* \OS{H\Z/p^j}{q}$ for $E = E_\Gamma$ the associated Morava $E$--theory.  This is indeed possible, and the analogous formula is true at the level of Hopf algebras: \[E_* \OS{H(S^1[p^j])}{q} \cong \Alt^q E_* \OS{H(S^1[p^j])}{1}.\] However, the attendant algebraic geometry is quite complicated: you either need a form of Dieudonn\'e theory that functions over $\context{E_\Gamma}$ (and then attempt to drag the proof above through that setting), or you need to directly confront what ``\index{p divisible group@$p$--divisible group!alternating power}alternating power of a $p$--divisible group'' means at the level of $p$--divisible groups (and forego all of the time-saving help afforded to you by Dieudonn\'e theory).
 \end{remark}
 
